# nmcurse

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
ui/: network.cpp  network.hpp  ui.cpp  ui.hpp
